docs: Add module analysis documents and update project configuration
- Add production policy/settings analysis for all 13 services (docs/modules/01-12)
- Add Recruitment, Certificate, Appointment service documentation
- Add Employee Card and Audit Log sections to existing docs
- Update CLAUDE.md: 13 services, SQS/SNS messaging, custom JWT auth, module refs
- Update README.md: new services, architecture diagram, module docs section
- Fix SecurityFilter dual-registration across all services
- Improve frontend mock handlers, MDM tree view, code form UX
- Add auth-service unit tests and PRD gap analysis

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>